--- a/Vhista/Subscription/Base.lproj/Subscription.storyboard
+++ b/Vhista/Subscription/Base.lproj/Subscription.storyboard
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -56,12 +57,12 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Uph-El-aEc">
-                                <rect key="frame" x="16" y="297.33333333333331" width="343" height="96"/>
+                                <rect key="frame" x="16" y="297.33333333333331" width="343" height="148"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KtP-7s-OI3">
                                         <rect key="frame" x="0.0" y="0.0" width="343" height="44"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <accessibility key="accessibilityConfiguration" hint="By selecting this button you can subscribe to our unlimited access" label="Subscribe Button"/>
+                                        <accessibility key="accessibilityConfiguration" hint="By selecting this button you can subscribe to our unlimited access"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="44" id="rvA-f4-CyW"/>
                                         </constraints>
@@ -81,6 +82,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ad5-Ud-HeS">
                                         <rect key="frame" x="0.0" y="52" width="343" height="44"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <accessibility key="accessibilityConfiguration" hint="By selecting this button you can restore unlimited access, if previously purchased and in active state"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="44" id="gDP-6u-TbK"/>
                                         </constraints>
@@ -97,10 +99,30 @@
                                             <action selector="restoreSubscription:" destination="L5o-sw-IbF" eventType="touchUpInside" id="9yG-cA-TIC"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dcM-Sk-fk2">
+                                        <rect key="frame" x="0.0" y="104" width="343" height="44"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <accessibility key="accessibilityConfiguration" hint="By selecting this button you get 5 more free deep analysis images."/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="DKH-Tc-k3K"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                        <state key="normal" title="Get 5 More Free Images!">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="5"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="getFreeSubscription:" destination="L5o-sw-IbF" eventType="touchUpInside" id="sua-0q-Vgc"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                             </stackView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="justified" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XHB-6r-Nxo">
-                                <rect key="frame" x="8" y="401" width="359" height="411"/>
+                                <rect key="frame" x="8" y="453.33333333333326" width="359" height="358.66666666666674"/>
                                 <color key="backgroundColor" white="0.070000000000000007" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <string key="text">You can see our Terms of Use at: https://vhista.com/terms/ and our privacy policy in https://vhista.com/privacy/
 
@@ -151,6 +173,7 @@ Any unused portion of a free trial period, if offered, will be forfeited when th
                     </view>
                     <connections>
                         <outlet property="buyButton" destination="KtP-7s-OI3" id="Rpt-hs-VyG"/>
+                        <outlet property="freeButton" destination="dcM-Sk-fk2" id="Tl1-R3-qcf"/>
                         <outlet property="lengthLabel" destination="IgC-e8-ubH" id="8eZ-pa-uos"/>
                         <outlet property="priceLabel" destination="5xw-qB-uaZ" id="4a0-Aq-AuZ"/>
                         <outlet property="restoreButton" destination="ad5-Ud-HeS" id="tES-bi-rIK"/>
